[package]
name = "dlp-fetch-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol = { version = "1.3.0" }
teloxide = { version = "0.12", features = ["macros", "rustls", "auto-send", "ctrlc_handler"], default-features = false }
log = "0.4"
anyhow = "1.0.71"
not-so-human-panic = "1.1.5"
tokio = { version = "1.28.2", features = ["rt", "macros", "rt-multi-thread"] }
simple_logger = "4.1.0"
which = "4.4.0"
reqwest = { version = "0.11", features = ["rustls"], default-features = false }
url = "2.4.0"
youtube_dl = { version = "0.8.1", features = ["tokio", "rustls-tls"], default-features = false }
dirs = "5.0.1"
